--- a/AdvProgrammingExercises/UnitTest/UnitTest.vcxproj.filters
+++ b/AdvProgrammingExercises/UnitTest/UnitTest.vcxproj.filters
@@ -24,6 +24,15 @@
     <ClCompile Include="Vector3Test.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="StringTest.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="StringTest_HomeworkSlide.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="Vector3Test_HomeworkSlide.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
