--- a/AdvProgrammingExercises/AdvProgrammingExercises/AdvProgrammingExercises.vcxproj.filters
+++ b/AdvProgrammingExercises/AdvProgrammingExercises/AdvProgrammingExercises.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="Vector3.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="String.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
