--- a/AdvProgrammingExercises/UnitTest/UnitTest.vcxproj
+++ b/AdvProgrammingExercises/UnitTest/UnitTest.vcxproj
@@ -162,8 +162,11 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="StringTest.cpp" />
+    <ClCompile Include="StringTest_HomeworkSlide.cpp" />
     <ClCompile Include="Vector3Test.cpp" />
     <ClCompile Include="UnitTest.cpp" />
+    <ClCompile Include="Vector3Test_HomeworkSlide.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
