--- a/AdvProgrammingExercises/AdvProgrammingExercises/AdvProgrammingExercises.vcxproj.filters
+++ b/AdvProgrammingExercises/AdvProgrammingExercises/AdvProgrammingExercises.vcxproj.filters
@@ -18,12 +18,21 @@
     <ClCompile Include="AdvProgrammingExercises.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="StringHash.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="String.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Vector3.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="String.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="StringHash.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
