--- a/AdvProgrammingExercises/UnitTest/UnitTest.vcxproj
+++ b/AdvProgrammingExercises/UnitTest/UnitTest.vcxproj
@@ -158,9 +158,11 @@
   <ItemGroup>
     <ClCompile Include="..\AdvProgrammingExercises\String.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="..\AdvProgrammingExercises\StringHash.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -169,6 +171,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="StringTest.cpp" />
+    <ClCompile Include="StringTest_Comparison.cpp" />
     <ClCompile Include="StringTest_HomeworkSlide.cpp" />
     <ClCompile Include="Vector3Test.cpp" />
     <ClCompile Include="UnitTest.cpp" />
