--- a/AdvProgrammingExercises/UnitTest/UnitTest.vcxproj.filters
+++ b/AdvProgrammingExercises/UnitTest/UnitTest.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="..\AdvProgrammingExercises\StringHash.cpp">
       <Filter>Archivos de origen\Añadidos</Filter>
     </ClCompile>
+    <ClCompile Include="StringTest_Comparison.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
