--- a/Engine/Source/Engine.vcxproj.filters
+++ b/Engine/Source/Engine.vcxproj.filters
@@ -7,9 +7,6 @@
     <ClCompile Include="DebugDrawPass.cpp">
       <Filter>TeacherStuff</Filter>
     </ClCompile>
-    <ClCompile Include="Engine.cpp">
-      <Filter>TeacherStuff</Filter>
-    </ClCompile>
     <ClCompile Include="GamePad.cpp">
       <Filter>TeacherStuff</Filter>
     </ClCompile>
@@ -59,6 +56,7 @@
     <ClCompile Include="ModuleEditor.cpp">
       <Filter>Engine_UI</Filter>
     </ClCompile>
+    <ClCompile Include="Engine.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h">
@@ -68,9 +66,6 @@
       <Filter>TeacherStuff</Filter>
     </ClInclude>
     <ClInclude Include="DebugDrawPass.h">
-      <Filter>TeacherStuff</Filter>
-    </ClInclude>
-    <ClInclude Include="Engine.h">
       <Filter>TeacherStuff</Filter>
     </ClInclude>
     <ClInclude Include="framework.h">
@@ -134,6 +129,7 @@
     <ClInclude Include="ModuleEditor.h">
       <Filter>Engine_UI</Filter>
     </ClInclude>
+    <ClInclude Include="Engine.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Engine.ico">
