--- a/Engine/Game/imgui.ini
+++ b/Engine/Game/imgui.ini
@@ -4,9 +4,35 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=290,163
-Size=550,680
+Pos=0,24
+Size=439,754
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][Console]
+Pos=0,780
+Size=1904,381
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][DockSpace Window]
+Size=1399,901
 Collapsed=0
 
+[Window][DockSpaceWindow]
+Pos=0,24
+Size=1904,1137
+Collapsed=0
+
+[Table][0x51D6F5EA,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
 [Docking][Data]
+DockSpace     ID=0xE34911F6 Window=0x7CF38D7C Pos=0,24 Size=1904,1137 Split=Y
+  DockNode    ID=0x00000001 Parent=0xE34911F6 SizeRef=1920,754 Split=X
+    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=439,808 Selected=0x5E5F7166
+    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=1463,808 CentralNode=1
+  DockNode    ID=0x00000002 Parent=0xE34911F6 SizeRef=1920,381 Selected=0xEA83D666
 
