--- a/Engine/Game/imgui.ini
+++ b/Engine/Game/imgui.ini
@@ -24,13 +24,18 @@ Pos=0,24
 Size=1904,1017
 Collapsed=0
 
+[Window][Exercise 3 Controls]
+Pos=60,60
+Size=368,250
+Collapsed=0
+
 [Table][0x51D6F5EA,3]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockSpace     ID=0xE34911F6 Window=0x7CF38D7C Pos=0,24 Size=1904,1017 Split=Y
+DockSpace     ID=0xE34911F6 Pos=0,24 Size=1904,1017 Split=Y
   DockNode    ID=0x00000001 Parent=0xE34911F6 SizeRef=1920,754 Split=X
     DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=439,808 Selected=0x5E5F7166
     DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=1463,808 CentralNode=1
