--- a/Engine/Game/imgui.ini
+++ b/Engine/Game/imgui.ini
@@ -4,13 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,24
-Size=439,634
+Pos=175,162
+Size=438,754
 Collapsed=0
-DockId=0x00000003,0
 
 [Window][Console]
-Pos=0,660
+Pos=0,780
 Size=1904,381
 Collapsed=0
 DockId=0x00000002,0
@@ -25,8 +24,23 @@ Size=1904,1017
 Collapsed=0
 
 [Window][Exercise 3 Controls]
-Pos=60,60
+Pos=15,32
 Size=368,250
+Collapsed=0
+
+[Window][WindowOverViewport_11111111]
+Pos=0,24
+Size=1904,1137
+Collapsed=0
+
+[Window][Exercise 1 Settings]
+Pos=1211,36
+Size=671,69
+Collapsed=0
+
+[Window][Exercise 2 Settings]
+Pos=39,50
+Size=641,208
 Collapsed=0
 
 [Table][0x51D6F5EA,3]
@@ -35,9 +49,7 @@ Column 1  Weight=1.0000
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockSpace     ID=0xE34911F6 Window=0x7CF38D7C Pos=0,24 Size=1904,1017 Split=Y
-  DockNode    ID=0x00000001 Parent=0xE34911F6 SizeRef=1920,754 Split=X
-    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=439,808 Selected=0x5E5F7166
-    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=1463,808 CentralNode=1
-  DockNode    ID=0x00000002 Parent=0xE34911F6 SizeRef=1920,381 Selected=0xEA83D666
+DockSpace   ID=0xE3E13530 Window=0x1BBC0F80 Pos=0,24 Size=1904,1137 Split=Y
+  DockNode  ID=0x00000001 Parent=0xE3E13530 SizeRef=1920,722 CentralNode=1
+  DockNode  ID=0x00000002 Parent=0xE3E13530 SizeRef=1920,381 Selected=0xEA83D666
 
