--- a/Engine/Source/Engine.vcxproj.filters
+++ b/Engine/Source/Engine.vcxproj.filters
@@ -1,9 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="Application.cpp">
-      <Filter>TeacherStuff</Filter>
-    </ClCompile>
     <ClCompile Include="DebugDrawPass.cpp">
       <Filter>TeacherStuff</Filter>
     </ClCompile>
@@ -73,11 +70,10 @@
     <ClCompile Include="ModuleExercise3.cpp">
       <Filter>Exercises</Filter>
     </ClCompile>
+    <ClCompile Include="ModuleUI.cpp" />
+    <ClCompile Include="Application.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Application.h">
-      <Filter>TeacherStuff</Filter>
-    </ClInclude>
     <ClInclude Include="debug_draw.hpp">
       <Filter>TeacherStuff</Filter>
     </ClInclude>
@@ -166,6 +162,8 @@
     <ClInclude Include="ModuleExercise3.h">
       <Filter>Exercises</Filter>
     </ClInclude>
+    <ClInclude Include="ModuleUI.h" />
+    <ClInclude Include="Application.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Engine.ico">
