--- a/Engine/Game/imgui.ini
+++ b/Engine/Game/imgui.ini
@@ -4,9 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=175,162
-Size=438,754
+Pos=0,24
+Size=324,754
 Collapsed=0
+DockId=0x00000004,0
 
 [Window][Console]
 Pos=0,780
@@ -24,7 +25,7 @@ Size=1904,1017
 Collapsed=0
 
 [Window][Exercise 3 Controls]
-Pos=15,32
+Pos=1414,30
 Size=368,250
 Collapsed=0
 
@@ -39,7 +40,7 @@ Size=671,69
 Collapsed=0
 
 [Window][Exercise 2 Settings]
-Pos=39,50
+Pos=1239,348
 Size=641,208
 Collapsed=0
 
@@ -49,7 +50,9 @@ Column 1  Weight=1.0000
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockSpace   ID=0xE3E13530 Window=0x1BBC0F80 Pos=0,24 Size=1904,1137 Split=Y
-  DockNode  ID=0x00000001 Parent=0xE3E13530 SizeRef=1920,722 CentralNode=1
-  DockNode  ID=0x00000002 Parent=0xE3E13530 SizeRef=1920,381 Selected=0xEA83D666
+DockSpace     ID=0xE3E13530 Pos=0,24 Size=1904,1137 Split=Y
+  DockNode    ID=0x00000001 Parent=0xE3E13530 SizeRef=1920,722 Split=X
+    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=324,754 Selected=0x5E5F7166
+    DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=1578,754 CentralNode=1
+  DockNode    ID=0x00000002 Parent=0xE3E13530 SizeRef=1920,381 Selected=0xEA83D666
 
