--- a/Engine/Game/imgui.ini
+++ b/Engine/Game/imgui.ini
@@ -25,8 +25,8 @@ Size=1904,1017
 Collapsed=0
 
 [Window][Exercise 3 Controls]
-Pos=1414,30
-Size=368,250
+Pos=1393,30
+Size=368,243
 Collapsed=0
 
 [Window][WindowOverViewport_11111111]
@@ -42,6 +42,11 @@ Collapsed=0
 [Window][Exercise 2 Settings]
 Pos=1239,348
 Size=641,208
+Collapsed=0
+
+[Window][Camera]
+Pos=1397,304
+Size=374,282
 Collapsed=0
 
 [Table][0x51D6F5EA,3]
