--- a/Engine/Source/Engine.vcxproj.filters
+++ b/Engine/Source/Engine.vcxproj.filters
@@ -25,7 +25,6 @@
     <ClCompile Include="SimpleMath.cpp">
       <Filter>TeacherStuff</Filter>
     </ClCompile>
-    <ClCompile Include="ModuleD3D12.cpp" />
     <ClCompile Include="3rdParty\imgui-docking\imgui_demo.cpp">
       <Filter>External\ImGui</Filter>
     </ClCompile>
@@ -50,9 +49,6 @@
     <ClCompile Include="3rdParty\ImGuizmo\ImGuizmo.cpp">
       <Filter>External\ImGui</Filter>
     </ClCompile>
-    <ClCompile Include="ModuleEditor.cpp">
-      <Filter>Engine_UI</Filter>
-    </ClCompile>
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="EditorConsole.cpp">
       <Filter>Engine_UI\Console</Filter>
@@ -60,7 +56,6 @@
     <ClCompile Include="EditorMenuBar.cpp">
       <Filter>Engine_UI\BarMenu</Filter>
     </ClCompile>
-    <ClCompile Include="ModuleResources.cpp" />
     <ClCompile Include="ModuleExercise1.cpp">
       <Filter>Exercises</Filter>
     </ClCompile>
@@ -70,9 +65,23 @@
     <ClCompile Include="ModuleExercise3.cpp">
       <Filter>Exercises</Filter>
     </ClCompile>
-    <ClCompile Include="ModuleUI.cpp" />
     <ClCompile Include="Application.cpp" />
-    <ClCompile Include="ModuleRender.cpp" />
+    <ClCompile Include="ModuleD3D12.cpp">
+      <Filter>Modules</Filter>
+    </ClCompile>
+    <ClCompile Include="ModuleRender.cpp">
+      <Filter>Modules</Filter>
+    </ClCompile>
+    <ClCompile Include="ModuleResources.cpp">
+      <Filter>Modules</Filter>
+    </ClCompile>
+    <ClCompile Include="ModuleUI.cpp">
+      <Filter>Modules</Filter>
+    </ClCompile>
+    <ClCompile Include="ModuleEditor.cpp">
+      <Filter>Modules</Filter>
+    </ClCompile>
+    <ClCompile Include="ModuleCamera.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="debug_draw.hpp">
@@ -114,7 +123,6 @@
     <ClInclude Include="targetver.h">
       <Filter>TeacherStuff</Filter>
     </ClInclude>
-    <ClInclude Include="ModuleD3D12.h" />
     <ClInclude Include="3rdParty\imgui-docking\imgui.h">
       <Filter>External\ImGui</Filter>
     </ClInclude>
@@ -136,9 +144,6 @@
     <ClInclude Include="3rdParty\ImGuizmo\ImGuizmo.h">
       <Filter>External\ImGui</Filter>
     </ClInclude>
-    <ClInclude Include="ModuleEditor.h">
-      <Filter>Engine_UI</Filter>
-    </ClInclude>
     <ClInclude Include="Engine.h" />
     <ClInclude Include="EditorConsole.h">
       <Filter>Engine_UI\Console</Filter>
@@ -146,7 +151,6 @@
     <ClInclude Include="EditorMenuBar.h">
       <Filter>Engine_UI\BarMenu</Filter>
     </ClInclude>
-    <ClInclude Include="ModuleResources.h" />
     <ClInclude Include="ModuleExercise1.h">
       <Filter>Exercises</Filter>
     </ClInclude>
@@ -159,13 +163,29 @@
     <ClInclude Include="Chrono.h">
       <Filter>Utils</Filter>
     </ClInclude>
-    <ClInclude Include="Module.h" />
     <ClInclude Include="ModuleExercise3.h">
       <Filter>Exercises</Filter>
     </ClInclude>
-    <ClInclude Include="ModuleUI.h" />
     <ClInclude Include="Application.h" />
-    <ClInclude Include="ModuleRender.h" />
+    <ClInclude Include="Module.h">
+      <Filter>Modules</Filter>
+    </ClInclude>
+    <ClInclude Include="ModuleD3D12.h">
+      <Filter>Modules</Filter>
+    </ClInclude>
+    <ClInclude Include="ModuleRender.h">
+      <Filter>Modules</Filter>
+    </ClInclude>
+    <ClInclude Include="ModuleResources.h">
+      <Filter>Modules</Filter>
+    </ClInclude>
+    <ClInclude Include="ModuleUI.h">
+      <Filter>Modules</Filter>
+    </ClInclude>
+    <ClInclude Include="ModuleEditor.h">
+      <Filter>Modules</Filter>
+    </ClInclude>
+    <ClInclude Include="ModuleCamera.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Engine.ico">
@@ -202,6 +222,9 @@
     </Filter>
     <Filter Include="Shaders">
       <UniqueIdentifier>{828ef4aa-39fb-4b79-8505-0fa02cd4d506}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Modules">
+      <UniqueIdentifier>{f0b97f36-5656-4fc8-a4f7-02199447e5b2}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
