--- a/Engine/Source/Engine.vcxproj
+++ b/Engine/Source/Engine.vcxproj
@@ -175,6 +175,7 @@
     <ClInclude Include="debug_draw.hpp" />
     <ClInclude Include="EditorConsole.h" />
     <ClInclude Include="EditorMenuBar.h" />
+    <ClInclude Include="EditorToolbar.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="GamePad.h" />
@@ -268,6 +269,7 @@
     </ClCompile>
     <ClCompile Include="EditorConsole.cpp" />
     <ClCompile Include="EditorMenuBar.cpp" />
+    <ClCompile Include="EditorToolbar.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="GamePad.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
