--- a/Engine/Game/imgui.ini
+++ b/Engine/Game/imgui.ini
@@ -5,13 +5,13 @@ Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=0,24
-Size=324,831
+Size=324,1204
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Console]
-Pos=0,857
-Size=1691,171
+Pos=0,1230
+Size=2544,171
 Collapsed=0
 DockId=0x00000002,0
 
@@ -25,13 +25,13 @@ Size=1904,1017
 Collapsed=0
 
 [Window][Exercise 3 Controls]
-Pos=1277,39
-Size=368,243
+Pos=347,67
+Size=478,554
 Collapsed=0
 
 [Window][WindowOverViewport_11111111]
 Pos=0,24
-Size=1691,1004
+Size=2544,1377
 Collapsed=0
 
 [Window][Exercise 1 Settings]
@@ -45,8 +45,8 @@ Size=641,208
 Collapsed=0
 
 [Window][Camera]
-Pos=1198,258
-Size=468,751
+Pos=1987,110
+Size=419,975
 Collapsed=0
 
 [Table][0x51D6F5EA,3]
@@ -55,9 +55,9 @@ Column 1  Weight=1.0000
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockSpace     ID=0xE3E13530 Window=0x1BBC0F80 Pos=0,24 Size=1691,1004 Split=Y
+DockSpace     ID=0xE3E13530 Window=0x1BBC0F80 Pos=0,24 Size=2544,1377 Split=Y
   DockNode    ID=0x00000001 Parent=0xE3E13530 SizeRef=1920,831 Split=X
     DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=324,754 Selected=0x5E5F7166
-    DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=1578,754 CentralNode=1
+    DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=1578,754 CentralNode=1 Selected=0xAA49D574
   DockNode    ID=0x00000002 Parent=0xE3E13530 SizeRef=1920,171 Selected=0xEA83D666
 
