Module Camera refactored and settings instance created to handle camera settigs

--- a/Engine/Game/imgui.ini
+++ b/Engine/Game/imgui.ini
@@ -5,13 +5,13 @@ Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=0,24
-Size=324,1204
+Size=372,1058
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Console]
-Pos=0,1230
-Size=2544,171
+Pos=0,1084
+Size=2544,317
 Collapsed=0
 DockId=0x00000002,0
 
@@ -25,7 +25,7 @@ Size=1904,1017
 Collapsed=0
 
 [Window][Exercise 3 Controls]
-Pos=347,67
+Pos=2038,37
 Size=478,554
 Collapsed=0
 
@@ -45,9 +45,16 @@ Size=641,208
 Collapsed=0
 
 [Window][Camera]
-Pos=1987,110
-Size=419,975
+Pos=0,24
+Size=372,1058
 Collapsed=0
+DockId=0x00000004,0
+
+[Window][Settings]
+Pos=0,24
+Size=395,1058
+Collapsed=0
+DockId=0x00000003,0
 
 [Table][0x51D6F5EA,3]
 Column 0  Weight=1.0000
@@ -55,9 +62,11 @@ Column 1  Weight=1.0000
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockSpace     ID=0xE3E13530 Window=0x1BBC0F80 Pos=0,24 Size=2544,1377 Split=Y
-  DockNode    ID=0x00000001 Parent=0xE3E13530 SizeRef=1920,831 Split=X
-    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=324,754 Selected=0x5E5F7166
-    DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=1578,754 CentralNode=1 Selected=0xAA49D574
-  DockNode    ID=0x00000002 Parent=0xE3E13530 SizeRef=1920,171 Selected=0xEA83D666
+DockSpace       ID=0xE3E13530 Window=0x1BBC0F80 Pos=0,24 Size=2544,1377 Split=Y
+  DockNode      ID=0x00000001 Parent=0xE3E13530 SizeRef=1920,1058 Split=X
+    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=372,754 Selected=0xAA49D574
+    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=2170,754 Split=X Selected=0xAA49D574
+      DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=395,1058 Selected=0x4746B4B8
+      DockNode  ID=0x00000006 Parent=0x00000005 SizeRef=2147,1058 CentralNode=1
+  DockNode      ID=0x00000002 Parent=0xE3E13530 SizeRef=1920,317 Selected=0xEA83D666
 
