--- a/Engine/Game/imgui.ini
+++ b/Engine/Game/imgui.ini
@@ -10,10 +10,10 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Console]
-Pos=0,1084
-Size=2544,317
+Pos=0,724
+Size=1466,317
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000007,0
 
 [Window][DockSpace Window]
 Size=1399,901
@@ -31,7 +31,7 @@ Collapsed=0
 
 [Window][WindowOverViewport_11111111]
 Pos=0,24
-Size=2544,1377
+Size=1904,1017
 Collapsed=0
 
 [Window][Exercise 1 Settings]
@@ -52,12 +52,12 @@ DockId=0x00000004,0
 
 [Window][Settings]
 Pos=0,24
-Size=395,1058
+Size=395,698
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Exercise 4 Controls]
-Pos=453,58
+Pos=507,96
 Size=353,240
 Collapsed=0
 
@@ -66,17 +66,30 @@ Pos=531,439
 Size=465,291
 Collapsed=0
 
+[Window][Performance]
+Pos=1468,724
+Size=436,317
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][About]
+Pos=640,327
+Size=527,331
+Collapsed=0
+
 [Table][0x51D6F5EA,3]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockSpace       ID=0xE3E13530 Window=0x1BBC0F80 Pos=0,24 Size=2544,1377 Split=Y
+DockSpace       ID=0xE3E13530 Window=0x1BBC0F80 Pos=0,24 Size=1904,1017 Split=Y
   DockNode      ID=0x00000001 Parent=0xE3E13530 SizeRef=1920,1058 Split=X
     DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=372,754 Selected=0xAA49D574
     DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=2170,754 Split=X Selected=0xAA49D574
       DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=395,1058 Selected=0x4746B4B8
       DockNode  ID=0x00000006 Parent=0x00000005 SizeRef=2147,1058 CentralNode=1
-  DockNode      ID=0x00000002 Parent=0xE3E13530 SizeRef=1920,317 Selected=0xEA83D666
+  DockNode      ID=0x00000002 Parent=0xE3E13530 SizeRef=1920,317 Split=X Selected=0xEA83D666
+    DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=1466,317 Selected=0xEA83D666
+    DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=436,317 Selected=0x726D8899
 
