--- a/Engine/Source/Engine.vcxproj
+++ b/Engine/Source/Engine.vcxproj
@@ -173,8 +173,10 @@
     <ClInclude Include="Chrono.h" />
     <ClInclude Include="DebugDrawPass.h" />
     <ClInclude Include="debug_draw.hpp" />
+    <ClInclude Include="EditorAbout.h" />
     <ClInclude Include="EditorConsole.h" />
     <ClInclude Include="EditorMenuBar.h" />
+    <ClInclude Include="EditorPerformance.h" />
     <ClInclude Include="EditorSettings.h" />
     <ClInclude Include="EditorToolbar.h" />
     <ClInclude Include="Engine.h" />
@@ -270,8 +272,10 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="EditorAbout.cpp" />
     <ClCompile Include="EditorConsole.cpp" />
     <ClCompile Include="EditorMenuBar.cpp" />
+    <ClCompile Include="EditorPerformance.cpp" />
     <ClCompile Include="EditorSettings.cpp" />
     <ClCompile Include="EditorToolbar.cpp" />
     <ClCompile Include="Engine.cpp" />
