--- a/Engine/Game/imgui.ini
+++ b/Engine/Game/imgui.ini
@@ -64,7 +64,7 @@ Collapsed=0
 [Window][Texture Viewer Options]
 Pos=531,439
 Size=465,291
-Collapsed=0
+Collapsed=1
 
 [Window][Performance]
 Pos=1513,762
@@ -75,6 +75,11 @@ DockId=0x00000008,0
 [Window][About]
 Pos=640,327
 Size=527,331
+Collapsed=0
+
+[Window][Assigment 1 Controlls]
+Pos=410,35
+Size=239,223
 Collapsed=0
 
 [Table][0x51D6F5EA,3]
